# PAEMS-Precise_and_Adaptive_Error_Model_for_superconducting_Quantum_Processors

./: .gitignore  README.md  main.py  pyproject.toml  tutorial_run.py  tutorial_visualize.py
Data/Multi_Rep_Code/Exp/brisbane_layout_0/: batch_detection_fractions_data.json
Data/Multi_Rep_Code/SCPQN_model/brisbane_layout_0/d1rqo2mjpjps738m44r0/: optimized_parameters.json
Optimization_CMA-ES/: main_averaged.py  optimize_ecr_parallel.py  optimize_leakage_parallel.py  optimize_mea_parallel.py  optimize_t1t2_parallel.py
Simulation/: config.py
Simulation/Analysis_and_Plotting/: Plot_mtx.py  analysis.py
Simulation/Creation_and_Sampling/: operations_simulation.py  sampling.py
Simulation/Paramaeter_Loading/: calculate_p.py  main.py
paems.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
